# HeavenlyMechanicPavilion

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_LLM_CONFIG_IMPLEMENTATION.md  API_OVERVIEW.md  AUTHENTICATION_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  DATAFLOW_OVERVIEW.md  DB_OPTIMIZATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_PLAN.md  DOCKER_DEPLOYMENT_FILES.md  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_QUICKSTART.md  DOCKER_QUICK_REFERENCE.md  DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE_TASK_1_1.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_SMALL_MEDIUM_TASKS.md  IMPROVEMENT_ROADMAP.md  LAUNCH_PLAN.md  MISSING_DOCS_RECOVERY.md  MODULE_ANALYSIS_AND_TASKS.md  Makefile  OPTIMIZATION_QUICK_START.md  OPTIMIZATION_SUGGESTIONS.md  PERFORMANCE_OPTIMIZATIONS.md  PROGRESS_TRACKER.md  PROJECT_ANALYSIS.md  PROJECT_ANALYSIS_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  README_OVERVIEW.md  TESTING.md  (+10 more)
.gemini/: settings.json
apps/server/: .coverage  .env.example  Dockerfile  alembic.ini  main.py  moon.yml  pyproject.toml  requirements.txt  test_akshare.py
apps/server/alembic/: env.py  script.py.mako
apps/server/alembic/versions/: 001_initial_schema.py  002_add_north_money_history.py  003_add_analysis_result_user_id.py
apps/server/api/: dependencies.py  exceptions.py  middleware.py  sse.py
apps/server/api/routes/: admin.py  ai_config.py  analyze.py  auth.py  chat.py  cross_asset.py  discover.py  health.py  jiejin.py  lhb.py  macro.py  market.py  market_watcher.py  memory.py  news.py  north_money.py  oauth.py  passkey.py  policy.py  portfolio.py  prompts.py  watchlist.py
apps/server/api/schemas/: __init__.py  ai_config.py  alternative.py  analysis.py  chat.py  health.py  macro.py  notification.py  prompts.py  supply_chain.py  vision.py
apps/server/config/: oauth.py  prompts.yaml  settings.py
apps/server/db/: models.py  trading.db
apps/server/db/chroma/: chroma.sqlite3
apps/server/scripts/: export_openapi_schema.py
apps/server/services/: accuracy_tracker.py  ai_config_service.py  alternative_data_service.py  api_metrics.py  auth_service.py  backtest_service.py  cache_service.py  central_bank_nlp_service.py  cross_asset_service.py  data_router.py  data_validator.py  graph_executor.py  health_monitor.py  jiejin_service.py  langsmith_service.py  lhb_service.py  macro_service.py  market_analyst_router.py  market_watcher.py  memory_service.py  model_racing.py  models.py  news_aggregator.py  north_money_service.py  notification_service.py  policy_sector_service.py  prompt_config_service.py  prompt_manager.py  prompt_optimizer.py  risk_modeling_service.py  rollout_manager.py  scheduler.py  sentiment_aggregator.py  subgraph_metrics_service.py  supply_chain_service.py  synthesizer.py  task_queue.py  token_monitor.py  tts_service.py  unlock_service.py  (+1 more)
apps/server/tests/: conftest.py
apps/server/tests/fixtures/: __init__.py  mock_llm_responses.py  sample_market_data.py
apps/server/tradingagents/: default_config.py
apps/server/utils/: __init__.py  ttl_cache.py
apps/server/workers/: __init__.py  analysis_worker.py
(+282 files in other folders)
