[project]
name = "tradingagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.16.98",
    "apscheduler>=3.11.2",
    "backtrader>=1.9.78.123",
    "chainlit>=2.5.5",
    "chromadb>=1.0.12",
    "duckduckgo-search>=6.0.0",
    "langsmith>=0.1.100",
    "eodhd>=1.0.32",
    "fastapi>=0.128.0",
    "feedparser>=6.0.11",
    "finnhub-python>=2.4.23",
    "grip>=4.6.2",
    "httpx>=0.28.0",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=1.0.7",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "praw>=7.8.1",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "sqlmodel>=0.0.31",
    "sse-starlette>=2.3.6",
    "stockstats>=0.6.5",
    "structlog>=25.5.0",
    "tqdm>=4.67.1",
    "tushare>=1.4.21",
    "typing-extensions>=4.14.0",
    "uvicorn>=0.34.3",
    "yfinance>=0.2.63",
    "cryptography>=46.0.4",
    "psutil>=7.2.1",
    # Auth dependencies
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.0",
    "webauthn>=2.0.0",
    "email-validator>=2.0.0",
    "itsdangerous>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["api", "services", "db", "tradingagents"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
exclude = [
    "tests/",
    "cli/",
]

[[tool.mypy.overrides]]
module = [
    "tradingagents.*",
    "akshare.*",
    "yfinance.*",
    "finnhub.*",
    "chromadb.*",
    "langchain.*",
    "langchain_openai.*",
    "langchain_google_genai.*",
    "langchain_anthropic.*",
    "langchain_experimental.*",
    "langgraph.*",
    "feedparser.*",
    "praw.*",
    "stockstats.*",
    "tushare.*",
    "eodhd.*",
    "backtrader.*",
    "apscheduler.*",
    "sse_starlette.*",
    "structlog.*",
]
ignore_missing_imports = true
follow_imports = "skip"
